npm2deb (0.2.5-4) UNRELEASED; urgency=medium

  * Team upload
  * Bump standards version of generated packages to 3.9.8
  * Fix vcs url (Closes: #842741), typo in copyright (Closes: #842742)
    (thanks to Evgeni Golov)

  [ Suhail P ]
  * Fix dependency version formats (convert ^ to >=) (Closes: #840207)
  * Automate up to deb file creation (add uscan, uupdate and dpkg-buildpackage)
    (Closes: #840174)

  [ Shanavas M ]
  * When package.json has a files section, install them (Closes: #841995)

 -- Pirate Praveen <praveen@debian.org>  Sat, 29 Oct 2016 19:45:20 +0530

npm2deb (0.2.5-3) unstable; urgency=medium

  * Team upload
  * Update minimum version of node-github-url-from-git
    (for #840929)

  [ Shanavas M ]
  * Use rmadison for finding existing packages (Closes: #836182)
  * Convert package names to lower case (Closes: #840226)
  * Fix crash when url is invalid (Closes: #840169) 

 -- Pirate Praveen <praveen@debian.org>  Sat, 29 Oct 2016 13:57:45 +0530

npm2deb (0.2.5-1) unstable; urgency=medium

  * Imported Upstream version 0.2.5:
    + Search for NEW packages. Thanks to Thorsten Alteholz (Closes: #798867)
    + Bump debhelper version to 9 and standards version to 3.9.7.
      Thanks to Ondřej Nový.
    + Change Vcs-* URLs to https. Thanks to Ondřej Nový.
  * debian/control:
    + Bump Standars-Version 3.9.7
    + Bump debhelper 9
    + Fix VCS-* insecure fields
  * debian/compat: bump compat 9

 -- Leo Iannacone <l3on@ubuntu.com>  Sun, 13 Mar 2016 09:45:21 +0000

npm2deb (0.2.4-1) unstable; urgency=medium

  * Imported Upstream version 0.2.4:
    + template debian/control: set Priority to optional rather than
      extra. Thanks to Ross Gammon. (Closes: #798275) 

 -- Leo Iannacone <info@leoiannacone.com>  Tue, 08 Sep 2015 20:03:52 +0200

npm2deb (0.2.3-1) unstable; urgency=medium

  * Imported Upstream version 0.2.3:
    + Drop usage of XS-Testsuite in control template which causes
      lintian xs-testsuite-header-in-debian-control (Closes: #797677)